// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> <RadioGroup.Button /> Snapshots should match snapshot with default radio button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      checked={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 9999,
            "fontSize": 14,
            "height": 40,
            "justifyContent": "center",
            "paddingLeft": 24,
            "paddingRight": 24,
          },
        ]
      }
    >
      <Text
        checked={false}
        style={
          Array [
            Object {
              "fontFamily": "Rubik",
            },
          ]
        }
      >
        Radio 1
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<RadioGroup /> <RadioGroup.Button /> Snapshots should match snapshot with small radio button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      checked={false}
      small={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 9999,
            "fontSize": 14,
            "height": 32,
            "justifyContent": "center",
            "paddingLeft": 24,
            "paddingRight": 24,
          },
        ]
      }
    >
      <Text
        checked={false}
        style={
          Array [
            Object {
              "fontFamily": "Rubik",
            },
          ]
        }
      >
        Radio 1
      </Text>
    </View>
  </TouchableWithoutFeedback>
</View>
`;
